[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/RightHUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SF_Archery_Black_SC_Oblique.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD/coolness_bar_fill.png" type="Texture" id=3]
[ext_resource path="res://HUD/player_lifebar_fill.png" type="Texture" id=4]
[ext_resource path="res://HUD/panel_right.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[node name="RightHUD" type="Sprite3D"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 578, 398 )
transparent_bg = true
usage = 0
render_target_v_flip = true

[node name="RightPanel" type="TextureRect" parent="Viewport"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -517.377
margin_top = -380.0
margin_right = -0.377319
margin_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoolnessMeter" type="TextureProgress" parent="Viewport/RightPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.734
margin_top = -167.415
margin_right = -117.734
margin_bottom = -27.4148
step = 0.1
value = 100.0
texture_progress = ExtResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthBar" type="TextureProgress" parent="Viewport/RightPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -442.647
margin_top = -167.326
margin_right = -199.647
margin_bottom = -60.3264
step = 0.1
value = 100.0
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyMaxedLabel" type="Label" parent="Viewport/RightPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.825
margin_top = -280.908
margin_right = -109.825
margin_bottom = -246.908
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.807843, 1 )
text = "You're broke"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="Viewport/RightPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.89
margin_top = -242.089
margin_right = -107.89
margin_bottom = -215.089
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.807843, 1 )
text = "1,000,000,000,000"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthLabel" type="Label" parent="Viewport/RightPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -282.706
margin_top = -60.4029
margin_right = -212.706
margin_bottom = -24.4029
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.807843, 1 )
text = "100%"
__meta__ = {
"_edit_use_anchors_": false
}
